# light-elliptic-curve-lib

./: .lecc_message_to_point.c.swp  AUTHORS  Makefile  Makefile.am  Makefile.darwin  Makefile.in  README  README.md  config.status  configure  curve-constants.h  lecc.h  lecc_free_parameters.c  lecc_initialize_parameters.c  lecc_message_to_point.c  lecc_point_add.c  lecc_point_alloc.c  lecc_point_clean.c  lecc_point_copy.c  lecc_point_double.c  lecc_point_free.c  lecc_point_normalize.c  lecc_point_print.c  lecc_point_scalar_mul.c  lecc_point_scalar_mul_long.c  lecc_point_to_message.c  liblecc.la  points_are_equal.c
.deps/: lecc_free_parameters.Plo  lecc_initialize_parameters.Plo  lecc_message_to_point.Plo  lecc_point_add.Plo  lecc_point_alloc.Plo  lecc_point_clean.Plo  lecc_point_copy.Plo  lecc_point_double.Plo  lecc_point_free.Plo  lecc_point_normalize.Plo  lecc_point_print.Plo  lecc_point_scalar_mul.Plo  lecc_point_scalar_mul_long.Plo  lecc_point_to_message.Plo  points_are_equal.Plo
.libs/: liblecc.0.dylib  liblecc.lai
autom4te.cache/: output.0  output.1  traces.0  traces.1
demo/: README  demo  elgamal_ecc.c
