include_HEADERS=curve-constants.h  lecc.h  sgprimes.h
lib_LTLIBRARIES=liblecc.la
LIBS="-llightmp"
liblecc_la_SOURCES= \
lecc_initialize_parameters.c lecc_point_alloc.c lecc_point_double.c lecc_point_print.c lecc_point_to_message.c \
lecc_message_to_point.c lecc_point_clean.c lecc_point_free.c lecc_point_scalar_mul.c points_are_equal.c \
lecc_free_parameters.c lecc_point_add.c lecc_point_copy.c lecc_point_normalize.c lecc_point_scalar_mul_long.c
